RESOLVED FIXED57353
Autocorrection panel isn't positioned correctly in Safari (mac) when the zooming is not 1x.
https://bugs.webkit.org/show_bug.cgi?id=57353
Summary Autocorrection panel isn't positioned correctly in Safari (mac) when the zoom...
Jia Pu
Reported 2011-03-29 09:56:31 PDT
When Cmd-+/- is applied to the page being displayed in Safari window, autocorrection panel is displayed at incorrect location. <rdar://problem/9163983>
Attachments
Patch (v1) (13.33 KB, patch)
2011-03-29 14:38 PDT, Jia Pu
no flags
Patch (v2) (13.27 KB, patch)
2011-03-29 15:53 PDT, Jia Pu
no flags
Jia Pu
Comment 1 2011-03-29 14:38:13 PDT
Created attachment 87412 [details] Patch (v1)
Darin Adler
Comment 2 2011-03-29 15:27:07 PDT
Comment on attachment 87412 [details] Patch (v1) View in context: https://bugs.webkit.org/attachment.cgi?id=87412&action=review > Source/WebCore/page/Frame.cpp:948 > + Editor* editor = this->editor(); > + if (editor) > + editor->dismissCorrectionPanel(ReasonForDismissingCorrectionPanelIgnored); It is incorrect to null-check editor. The Editor is actually a data member of Frame, and so can never be null.
Jia Pu
Comment 3 2011-03-29 15:53:53 PDT
Created attachment 87421 [details] Patch (v2)
WebKit Commit Bot
Comment 4 2011-03-30 19:08:51 PDT
Comment on attachment 87421 [details] Patch (v2) Clearing flags on attachment: 87421 Committed r82533: <http://trac.webkit.org/changeset/82533>
WebKit Commit Bot
Comment 5 2011-03-30 19:08:55 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2011-03-30 20:35:42 PDT
http://trac.webkit.org/changeset/82533 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.