2011-03-30  Jia Pu  <jpu@apple.com>

Reviewed by Darin Adler.

        Autocorrection panel isn't positioned correctly in Safari (mac) when the zooming is not 1x.
        https://bugs.webkit.org/show_bug.cgi?id=57353
        <rdar://problem/9163983>

        Updated following test in response to recent change in AppKit spell checker.

        * platform/mac/editing/spelling/delete-autocorrected-word-1-expected.txt:
        * platform/mac/editing/spelling/delete-autocorrected-word-1.html:
2011-03-30  Jia Pu  <jpu@apple.com>

        Reviewed by Darin Adler.

        Autocorrection panel isn't positioned correctly in Safari (mac) when the zooming is not 1x.
        https://bugs.webkit.org/show_bug.cgi?id=57353
        <rdar://problem/9163983>

        We use Range::textQuads() instead of Range::boundingRect() to compute the position of correction
        panel. The latter function compensates for zooming, which we don't need in this case. We also
        dismiss correction panel when zooming factor is changed. This is done in Frame::setPageAndTextZoomFactors().

        * WebCore.exp.in:
        * dom/Range.cpp:
        (WebCore::Range::textQuads):
        * dom/Range.h:
        * editing/Editor.cpp:
        (WebCore::Editor::windowRectForRange):
        * editing/Editor.h:
        * page/Frame.cpp:
        (WebCore::Frame::setPageAndTextZoomFactors):

Canonical link: https://commits.webkit.org/72330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82533 268f45cc-cd09-0410-ab3c-d52691b4dbfc